Partially functional for Factorio 2.0

--- a/locale/de/config.cfg
+++ b/locale/de/config.cfg
@@ -1,19 +1,3 @@
-[entity-name]
-gunship-airborne=Kanonenboot
-cargo-plane-airborne=Frachtflugzeug
-jet-airborne=Jet
-flying-fortress-airborne=Fliegende Festung
-better-cargo-plane-airborne=Besseres Frachtflugzeug
-even-better-cargo-plane-airborne=Noch besseres Frachtflugzeug
-
-[entity-description]
-gunship-airborne=Aufklärungs- und Kampfflugzeug
-cargo-plane-airborne=Eine fliegende Langstrecken-Truhe.
-jet-airborne=Wenn du SCHNELL an einen Ort gelangen musst.
-flying-fortress-airborne=Der ultimative Luftüberlegenheitsflieger.
-better-cargo-plane-airborne=Ein bessere fliegende Langstrecken-Truhe.
-even-better-cargo-plane-airborne=Ein noch bessere fliegende Langstrecken-Truhe.
-
 [shortcut-name]
 aircraft-realism-show-takeoff-distance=Startdistanz schätzen
 
@@ -31,23 +15,17 @@ aircraft-realism-environmental-impact=Tödliche Zusammenstöße mit der Umwelt.
 aircraft-emit-pollution=Flugzeuge geben Umweltverschmutzung ab
 aircraft-pollution-amount=Menge der abgegebenen Umweltverschmutzung
 aircraft-realism-airborne-damage-immunity=Immunität gegen Luftschaden
-aircraft-takeoff-speed-gunship=Kanonenboot Startgeschwindigkeit
-aircraft-takeoff-speed-cargo-plane=Frachtflugzeug Startgeschwindigkeit
-aircraft-takeoff-speed-jet=Jet Startgeschwindigkeit
-aircraft-takeoff-speed-flying-fortress=Fliegende Festung Startgeschwindigkeit
-aircraft-takeoff-speed-better-cargo-plane=Besseres Frachtflugzeug Startgeschwindigkeit
-aircraft-takeoff-speed-even-better-cargo-plane=Noch besseres Frachtflugzeug Startgeschwindigkeit
 aircraft-speed-unit=Geschwindigkeitseinheit
 aircraft-realism-user-enable-gauges=Bordanzeigen aktivieren
 aircraft-realism-user-low-fuel-warning-percentage=Prozentsatz zur Warnung bei niedrigem Kraftstoff
 aircraft-realism-user-speed-unit=Bordanzeigen-Geschwindigkeits-Einheit
-aircraft-realism-sounds-enabled=Sounds aktivieren.
+aircraft-realism-sounds-enabled=Warnung bei niedrigem Kraftstoffstand
 
 [mod-setting-description]
 aircraft-realism-turn-radius=Vergrößert den Wenderadius der Flugzeuge.
 aircraft-realism-acceleration=Verringert die Beschleunigung von Flugzeugen für eine längere benötigte Startstrecke.
 aircraft-realism-braking-speed=Reduziert die Bremskraft, verlängert den Bremsweg.
-aircraft-realism-takeoff-health=Erhöhter Flugzeugschaden beim Zusammenstoßen mit Objekten (Felsen, Bäume, ...) bei Start und Landung.
+aircraft-realism-takeoff-health=Erhöhter Flugzeugschaden beim Zusammenstoßen mit Objekten bei Start und Landung.
 aircraft-realism-fuel-usage-multiplier-grounded=Wie viel ist der Treibstoffverbrauch von Boden-befindlichen Flugzeugen zu vervielfachen?
 aircraft-realism-fuel-usage-multiplier-airborne=Wie viel ist der Treibstoffverbrauch von Luft-befindlichen Flugzeugen zu vervielfachen?
 aircraft-realism-strict-runway-checking=Flugzeuge müssen von Kacheln mit einem Fahrzeugreibungsmodifikator starten und landen, der kleiner oder gleich dem eingestellten maximalen Fahrzeugreibungsmodifikator ist.
@@ -57,20 +35,8 @@ aircraft-realism-environmental-impact=Aufprall auf Klippen oder Wasser bei über
 aircraft-emit-pollution=Flugzeuge geben Umweltverschmutzung ab, wenn sich jemand darin befindet.
 aircraft-pollution-amount=Wieviel Umweltverschmutzung abgegeben wird, wenn jemand darin sitzt, multipliziert mit der Geschwindigkeit und dem Kraftstofftyp des Flugzeugs.
 aircraft-realism-airborne-damage-immunity=Flugzeuge in der Luft erleiden keinen Schaden
-aircraft-takeoff-speed-gunship=Geschwindigkeit zum Abheben, und keine Kollision mehr zu haben
-aircraft-takeoff-speed-cargo-plane=Geschwindigkeit zum Abheben, und keine Kollision mehr zu haben
-aircraft-takeoff-speed-jet=Geschwindigkeit zum Abheben, und keine Kollision mehr zu haben
-aircraft-takeoff-speed-flying-fortress=Geschwindigkeit zum Abheben, und keine Kollision mehr zu haben
-aircraft-takeoff-speed-better-cargo-plane=Geschwindigkeit zum Abheben, und keine Kollision mehr zu haben
-aircraft-takeoff-speed-even-better-cargo-plane=Geschwindigkeit zum Abheben, und keine Kollision mehr zu haben
-aircraft-speed-unit=Metrisches (km/h) oder Imperiales (mph) System.
+aircraft-speed-unit=Metrisches (km/h) oder Imperiales (mile/h) System.
 aircraft-realism-user-enable-gauges=Geschwindigkeits- und Kraftstoffanzeigen in der oberen linken Ecke des Bildschirms anzeigen, wenn man sich in einem Flugzeug befindet.
 aircraft-realism-user-low-fuel-warning-percentage=Prozentsatz der maximalen Kraftstoffmenge, um die Warnleuchten in der Kraftstoffanzeige einzuschalten.
-aircraft-realism-user-speed-unit=Metrisches (km/h) oder Imperiales (mph) System.
-aircraft-realism-sounds-enabled=Wenn ausgeschaltet, wird Aircraft Realism keine Sounds wiedergeben.
-
-[string-mod-setting]
-aircraft-speed-unit-metric=Metrisch
-aircraft-speed-unit-imperial=Imperial
-aircraft-realism-user-speed-unit-metric=Metrisch
-aircraft-realism-user-speed-unit-imperial=Imperial
+aircraft-realism-user-speed-unit=Metrisches (km/h) oder Imperiales (mile/h) System.
+aircraft-realism-sounds-enabled=Gibt einen Warnton ab, wenn der Kraftstoff unter dem eingestellten Prozentsatz liegt
