--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -1,19 +1,3 @@
-[entity-name]
-gunship-airborne=Gunship
-cargo-plane-airborne=Cargo plane
-jet-airborne=Jet
-flying-fortress-airborne=Flying fortress
-better-cargo-plane-airborne=Better Cargo Plane
-even-better-cargo-plane-airborne=Even Better Cargo Plane
-
-[entity-description]
-gunship-airborne=Recon and combat aircraft
-cargo-plane-airborne=A long-range flying chest.
-jet-airborne=For when you need to get somewhere FAST.
-flying-fortress-airborne=The ultimate in aerial superiority.
-better-cargo-plane-airborne=A better, longer-range, flying chest.
-even-better-cargo-plane-airborne=An even better, even longer-range flying chest.
-
 [shortcut-name]
 aircraft-realism-show-takeoff-distance=Estimate takeoff distance
 
@@ -24,64 +8,35 @@ aircraft-realism-braking-speed=Realistic braking force
 aircraft-realism-takeoff-health=Increased ground collision damage
 aircraft-realism-fuel-usage-multiplier-grounded=Fuel usage multiplier (grounded)
 aircraft-realism-fuel-usage-multiplier-airborne=Fuel usage multiplier (airborne)
-
-aircraft-realism-strict-runway-checking=Strict runway requirement
+aircraft-realism-strict-runway-checking=Runway requirement
 aircraft-realism-strict-runway-checking-maximum-tile-vehicle-friction=Runway tile max vehicle friction modifier
-aircraft-realism-strict-runway-max-taxi-speed=Strict runway max taxi speed
-
+aircraft-realism-strict-runway-max-taxi-speed=Non runway max speed
 aircraft-realism-environmental-impact=Deadly environmental impacts
 aircraft-emit-pollution=Planes emit pollution
 aircraft-pollution-amount=Emitted pollution amount
 aircraft-realism-airborne-damage-immunity=Airborne damage immunity
-
-aircraft-takeoff-speed-gunship=Gunship takeoff speed
-aircraft-takeoff-speed-cargo-plane=Cargo plane takeoff speed
-aircraft-takeoff-speed-jet=Jet takeoff speed
-aircraft-takeoff-speed-flying-fortress=Flying fortress takeoff speed
-
-aircraft-takeoff-speed-better-cargo-plane=Better cargo plane takeoff speed
-aircraft-takeoff-speed-even-better-cargo-plane=Even better cargo plane takeoff speed
-
-aircraft-speed-unit=Speed unit
-
+aircraft-speed-unit=Takeoff / landing speed unit
 aircraft-realism-user-enable-gauges=Enable gauges
 aircraft-realism-user-low-fuel-warning-percentage=Low fuel warning percentage
 aircraft-realism-user-speed-unit=Gauge speed unit
-aircraft-realism-sounds-enabled=Enable sounds
+aircraft-realism-sounds-enabled=Low fuel warning chime
 
 [mod-setting-description]
 aircraft-realism-turn-radius=Widens the turn radius of the planes
 aircraft-realism-acceleration=Decreases the acceleration of planes for longer needed takeoff distance
 aircraft-realism-braking-speed=Reduces the braking force, increasing the braking distance
-aircraft-realism-takeoff-health=Increased plane damage hitting objects (rocks, trees, ...) on takeoff / landing
+aircraft-realism-takeoff-health=Increased plane damage hitting objects on takeoff / landing
 aircraft-realism-fuel-usage-multiplier-grounded=How much to multiply fuel usage of grounded planes
 aircraft-realism-fuel-usage-multiplier-airborne=How much to multiply fuel usage of airborne planes
-
-aircraft-realism-strict-runway-checking=Planes must takeoff and land from tiles with a vehicle friction modifier less than or equal to the max vehicle friction modifier set below \n Otherwise the plane will not accelerate past the max taxi speed and take damage
-aircraft-realism-strict-runway-checking-maximum-tile-vehicle-friction=If strict runway requirement is enabled, planes must takeoff from tiles with a vehicle friction modifier less than or equal to what is set here
+aircraft-realism-strict-runway-checking=Planes must takeoff and land from tiles considered runways, which are tiles with a vehicle friction modifier less than max vehicle friction modifier
+aircraft-realism-strict-runway-checking-maximum-tile-vehicle-friction=If runway requirement is enabled, planes must takeoff from tiles with a vehicle friction modifier less than to what is set here
 aircraft-realism-strict-runway-max-taxi-speed=The max speed planes can travel at when not on a runway, exceeding this will deal damage to the plane
-
 aircraft-realism-environmental-impact=Impacts with cliffs and water over 40km/h will destroy the plane instead of stopping it
 aircraft-emit-pollution=Planes emit pollution while someone is sitting in it
 aircraft-pollution-amount=How much pollution to emit while someone is sitting in it, multiplied by the speed and fuel type of the plane
 aircraft-realism-airborne-damage-immunity=Airborne planes take no damage
-
-aircraft-takeoff-speed-gunship=Speed to takeoff and be airborne, no longer colliding with anything
-aircraft-takeoff-speed-cargo-plane=Speed to takeoff and be airborne, no longer colliding with anything
-aircraft-takeoff-speed-jet=Speed to takeoff and be airborne, no longer colliding with anything
-aircraft-takeoff-speed-flying-fortress=Speed to takeoff and be airborne, no longer colliding with anything
-aircraft-takeoff-speed-better-cargo-plane=Speed to takeoff and be airborne, no longer colliding with anything
-aircraft-takeoff-speed-even-better-cargo-plane=Speed to takeoff and be airborne, no longer colliding with anything
-
-aircraft-speed-unit=Whether the units are in metric (km/h) or imperial units (mph)
-
+aircraft-speed-unit=Whether the takeoff / landing speed are interpreted in metric (km/h) or imperial units (mile/h)
 aircraft-realism-user-enable-gauges=Show speed and fuel gauges in upper left corner of the screen after entering a plane
 aircraft-realism-user-low-fuel-warning-percentage=Percentage of max fuel to turn on warning lights in fuel gauge
-aircraft-realism-user-speed-unit=Whether the gauge displays speed in metric (km/h) or imperial units (mph)
-aircraft-realism-sounds-enabled=If disabled, Aircraft Realism will not play any sounds
-
-[string-mod-setting]
-aircraft-speed-unit-metric=Metric
-aircraft-speed-unit-imperial=Imperial
-aircraft-realism-user-speed-unit-metric=Metric
-aircraft-realism-user-speed-unit-imperial=Imperial
+aircraft-realism-user-speed-unit=Whether the gauge displays speed in metric (km/h) or imperial units (mile/h)
+aircraft-realism-sounds-enabled=Plays warning chime when fuel is below set percentage
