Update UI for takeoff distance estimation

--- a/locale/de/config.cfg
+++ b/locale/de/config.cfg
@@ -40,3 +40,8 @@ aircraft-realism-user-enable-gauges=Geschwindigkeits- und Kraftstoffanzeigen in 
 aircraft-realism-user-low-fuel-warning-percentage=Prozentsatz der maximalen Kraftstoffmenge, um die Warnleuchten in der Kraftstoffanzeige einzuschalten.
 aircraft-realism-user-speed-unit=Metrisches (km/h) oder Imperiales (mile/h) System.
 aircraft-realism-sounds-enabled=Gibt einen Warnton ab, wenn der Kraftstoff unter dem eingestellten Prozentsatz liegt
+
+[decorative-name]
+aircraft-realism-tde-runway-too-short=Landebahn zu kurz
+aircraft-realism-tde-distance=Abstand: __1__ Kacheln
+aircraft-realism-tde-timeout=Schätzung Zeitüberschreitung
