--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -40,3 +40,8 @@ aircraft-realism-user-enable-gauges=Show speed and fuel gauges in upper left cor
 aircraft-realism-user-low-fuel-warning-percentage=Percentage of max fuel to turn on warning lights in fuel gauge
 aircraft-realism-user-speed-unit=Whether the gauge displays speed in metric (km/h) or imperial units (mile/h)
 aircraft-realism-sounds-enabled=Plays warning chime when fuel is below set percentage
+
+[decorative-name]
+aircraft-realism-tde-runway-too-short=Runway too short
+aircraft-realism-tde-distance=Distance: __1__ tiles
+aircraft-realism-tde-timeout=Estimation timeout
